--- a/layouts/_partials/home/profile.html
+++ b/layouts/_partials/home/profile.html
@@ -1,6 +1,5 @@
 {{- $profile := .Site.Params.home.profile -}}
 <div class="home-profile">
-    {{- /* 1. 头像渲染 (原版) */ -}}
     {{- $avatar := $profile.avatarURL -}}
     {{- with $profile.gravatarEmail -}}
         {{- $avatar = md5 . | printf "https://www.gravatar.com/avatar/%v?s=240&d=mp" -}}
@@ -22,12 +21,10 @@
         </div>
     {{- end -}}
 
-    {{- /* 2. 标题渲染 (原版) */ -}}
     <h1 class="home-title">
         {{- .Site.Params.home.profile.title | default .Site.Title | safeHTML -}}
     </h1>
 
-    {{- /* 3. 副标题渲染 (原版) */ -}}
     {{- with $profile.subtitle -}}
         <div class="home-subtitle">
             {{- if $profile.typeit -}}
@@ -40,62 +37,57 @@
         </div>
     {{- end -}}
 
-    {{- /* 4. 社交图标渲染 (在原版基础上增加自定义 SVG 支持) */ -}}
     {{- if $profile.social -}}
         <div class="links">
             {{- $socialMap := resources.Get "data/social.yml" | transform.Unmarshal -}}
             {{- $socialArr := slice -}}
             {{- range $key, $value := .Site.Params.social -}}
+                {{- $social := $key | lower | index $socialMap | default dict -}}
                 {{- if $value -}}
-                    {{- $social := $key | lower | index $socialMap | default dict -}}
                     {{- if reflect.IsMap $value -}}
-                        {{- $social = merge $social $value -}}
+                        {{- with $value.weight -}}
+                            {{- $social = dict "Weight" . | merge $social -}}
+                        {{- end -}}
+                        {{- with $value.prefix -}}
+                            {{- $social = dict "Prefix" . | merge $social -}}
+                        {{- end -}}
+                        {{- with $value.template -}}
+                            {{- $social = dict "Template" . | merge $social -}}
+                        {{- end -}}
+                        {{- with $value.id -}}
+                            {{- $social = dict "Id" . | merge $social -}}
+                        {{- end -}}
+                        {{- with $value.url -}}
+                            {{- $social = dict "Url" . | merge $social -}}
+                        {{- end -}}
+                        {{- with $value.title -}}
+                            {{- $social = dict "Title" . | merge $social -}}
+                        {{- end -}}
+                        {{- with $value.newtab -}}
+                            {{- $social = dict "Newtab" . | merge $social -}}
+                        {{- end -}}
+                        {{- with $value.icon -}}
+                            {{- $social = dict "Icon" . | merge $social -}}
+                        {{- end -}}
                     {{- else if ne $value true -}}
                         {{- $social = dict "Id" $value | merge $social -}}
                     {{- end -}}
-                    
-                    {{- /* 注入原始 Key，方便后面找 SVG 文件 */ -}}
-                    {{- $social = dict "OriginalKey" $key | merge $social -}}
+                    {{- if $social.Icon.Simpleicons -}}
+                        {{- $prefix := ($.Scratch.Get "cdn" | default dict).simpleIconsPrefix -}}
+                        {{- $social = dict "Prefix" $prefix | dict "Icon" | merge $social -}}
+                    {{- end -}}
                     {{- $socialArr = $socialArr | append $social -}}
                 {{- end -}}
             {{- end -}}
-
             {{- range sort $socialArr "Weight" -}}
-                {{- /* 核心修改点：先看 assets/svg 里有没有对应的文件 */ -}}
-                {{- $customSvg := resources.Get (printf "svg/%v.svg" .OriginalKey) -}}
-                {{- if not $customSvg -}}
-                    {{- $customSvg = resources.Get (printf "svg/%v.svg" (.OriginalKey | lower)) -}}
-                {{- end -}}
-
-                {{- if $customSvg -}}
-                    <a href="{{ if .Url }}{{ .Url }}{{ else }}{{ .Prefix }}{{ .Id }}{{ end }}" title="{{ .Title | default .OriginalKey }}" target="_blank" rel="noopener noreffer me" class="social-icon-link">
-                        <span class="custom-icon-box {{ .OriginalKey | lower }}">
-                            {{- $customSvg.Content | safeHTML -}}
-                        </span>
-                    </a>
-                {{- else -}}
-                    {{- /* 如果没有自定义 SVG，走原版的内置渲染 (Email 会走这里) */ -}}
-                    {{- partial "plugin/social.html" . -}}
-                {{- end -}}
+                {{- partial "plugin/social.html" . -}}
             {{- end -}}
         </div>
     {{- end -}}
 
     {{- with $profile.disclaimer -}}
-        <h3 class="home-disclaimer">{{- . | safeHTML -}}</h3>
+        <h3 class="home-disclaimer">
+            {{- . | safeHTML -}}
+        </h3>
     {{- end -}}
 </div>
-
-<style>
-    .links { display: flex; justify-content: center; align-items: center; gap: 20px; margin-top: 1.2rem; flex-wrap: wrap; }
-    .social-icon-link { display: inline-flex; align-items: center; transition: transform 0.2s; }
-    .social-icon-link:hover { transform: scale(1.15); }
-    .custom-icon-box { display: flex; width: 2.2rem; height: 2.2rem; fill: currentColor; }
-    .custom-icon-box svg { width: 100%; height: auto; }
-    
-    /* 维持你之前的缩放倍数 */
-    .custom-icon-box.xhs svg { transform: scale(2.4); transform-origin: center; }
-    .custom-icon-box.wechat svg { transform: scale(1.15); }
-    /* 统一内置 Email 大小 */
-    .links .social-icon i { font-size: 2.1rem !important; }
-</style>
